--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ macro(compile_option _target _flag _var)
     if (${_var})
         message("Setting compile option : ${_flag}")
         target_compile_options(${_target} PRIVATE ${_flag})
-    else()
+    else ()
         message("Unsupported compile option: ${_flag}")
     endif ()
 endmacro()
@@ -78,7 +78,7 @@ macro(link_option _target _flag _var)
     if (${_var})
         message("Setting link option : ${_flag}")
         target_link_options(${_target} PRIVATE ${_flag})
-    else()
+    else ()
         message("Unsupported link option: ${_flag}")
     endif ()
 endmacro()
@@ -305,7 +305,12 @@ enable_warning_if_supported(-Wno-sign-compare)
 enable_warning_if_supported(-Wno-error=stringop-overflow=)
 enable_warning_if_supported(-Wno-stringop-overflow)
 
-enable_c_flag_if_avail(-march=native C_FLAGS_REL HAVE_MARCH_NATIVE)
+option(MARCH_NATIVE "Use march=native" "ON")
+if (MARCH_NATIVE)
+    enable_c_flag_if_avail(-march=native C_FLAGS_REL HAVE_MARCH_NATIVE)
+else ()
+    MESSAGE("Build without march=native")
+endif ()
 
 set(C_FLAGS_COMMON "${C_FLAGS_COMMON} -Wall -Werror -pedantic -Wno-error=unused-variable -Wno-error=unused-function")
 set(C_FLAGS_DEB "${C_FLAGS_DEB} -fno-omit-frame-pointer")
@@ -343,7 +348,6 @@ set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${C_FLAGS_COMMON} ${C_FLAGS_DEB}
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${C_FLAGS_COMMON} ${C_FLAGS_REL}")
 set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} ${C_FLAGS_COMMON} ${C_FLAGS_REL}")
 set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} ${C_FLAGS_COMMON} ${C_FLAGS_REL}")
-
 
 
 # -------------------- Compile Flags End ----------------------- #
