--- a/util/daemon/resql.service
+++ b/util/daemon/resql.service
@@ -3,6 +3,7 @@ Description=Resql database daemon
 After=network.target
 
 [Service]
+WorkingDirectory=/tmp/resql
 Type=notify
 ExecStart=/usr/local/bin/resql -c=/etc/resql.ini --systemd
 Restart=always
