test util server create/destroy

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,9 +9,9 @@ ubuntu_task:
     - mkdir build-debug && cd build-debug
     - cmake .. -DCMAKE_BUILD_TYPE=Debug -DRESQL_BUILD_TESTS=1 && make
     - make check
+    - rm -rf *
     - cd ..
-    - mkdir build-release && cd build-release
-    - cmake .. && make
+    - ./build.sh
 
 centos8_task:
   use_compute_credits: $CIRRUS_USER_COLLABORATOR == 'true'
@@ -24,22 +24,9 @@ centos8_task:
     - mkdir build-debug && cd build-debug
     - cmake .. -DCMAKE_BUILD_TYPE=Debug -DRESQL_BUILD_TESTS=1 && make
     - make check
+    - rm -rf *
     - cd ..
-    - mkdir build-release && cd build-release
-    - cmake .. && make
-
-osx_task:
-  use_compute_credits: $CIRRUS_USER_COLLABORATOR == 'true'
-  osx_instance:
-    image: catalina-xcode
-  test_script:
-    - brew install cmake
-    - mkdir build-debug && cd build-debug
-    - cmake .. -DCMAKE_BUILD_TYPE=Debug -DRESQL_BUILD_TESTS=1 && make
-    - make check
-    - cd ..
-    - mkdir build-release && cd build-release
-    - cmake .. && make
+    - ./build.sh
 
 freebsd_task:
   use_compute_credits: $CIRRUS_USER_COLLABORATOR == 'true'
@@ -52,6 +39,6 @@ freebsd_task:
     - mkdir build-debug && cd build-debug
     - cmake .. -DCMAKE_BUILD_TYPE=Debug -DRESQL_BUILD_TESTS=1 && make
     - make check
+    - rm -rf *
     - cd ..
-    - mkdir build-release && cd build-release
-    - cmake .. && make
+    - ./build.sh
