server and client utility for tests, add flag to connect msg

--- a/.github/workflows/.macos.yml
+++ b/.github/workflows/.macos.yml
@@ -22,7 +22,7 @@ jobs:
           CC: ${{ matrix.compiler }}
         run: |
           mkdir build-debug && cd build-debug
-          cmake .. -DCMAKE_BUILD_TYPE=Debug -DRESQL_BUILD_TESTS=1 -DSANITIZER=address
+          cmake .. -DCMAKE_BUILD_TYPE=Debug -DRESQL_BUILD_TESTS=1 -DSANITIZER=address -DCMAKE_C_COMPILER=$CC
           make -j
           make check
           rm -rf *
