--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -305,12 +305,13 @@ enable_warning_if_supported(-Wno-sign-compare)
 enable_warning_if_supported(-Wno-error=stringop-overflow=)
 enable_warning_if_supported(-Wno-stringop-overflow)
 
-option(MARCH_NATIVE "Use march=native" "ON")
-if (MARCH_NATIVE)
-    enable_c_flag_if_avail(-march=native C_FLAGS_REL HAVE_MARCH_NATIVE)
-else ()
-    MESSAGE("Build without march=native")
-endif ()
+
+#option(MARCH_NATIVE "Use march=native" "ON")
+#if (MARCH_NATIVE)
+#    enable_c_flag_if_avail(-march=native C_FLAGS_REL HAVE_MARCH_NATIVE)
+#else ()
+#    MESSAGE("Build without march=native")
+#endif ()
 
 set(C_FLAGS_COMMON "${C_FLAGS_COMMON} -Wall -Werror -pedantic -Wno-error=unused-variable -Wno-error=unused-function")
 set(C_FLAGS_DEB "${C_FLAGS_DEB} -fno-omit-frame-pointer")
