--- a/.github/workflows/.coverage.yml
+++ b/.github/workflows/.coverage.yml
@@ -1,3 +1,5 @@
+name: "Coverage"
+
 on:
   push:
     branches:
@@ -18,4 +20,4 @@ jobs:
           cmake .. -DRESQL_BUILD_TESTS=1 -DCMAKE_BUILD_TYPE=Coverage
           make -j
           make coverage
-          bash <(curl -s https://codecov.io/bash) -f coverage.info -t ${{ secrets.CODECOV }}
+          bash <(curl -s https://codecov.io/bash) -f test/coverage.info -t ${{ secrets.CODECOV }}
