--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -125,10 +125,12 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/test)
 set(CTEST_BINARY_DIRECTORY ${PROJECT_BINARY_DIR}/test)
 
 resql_test(client_test.c)
+resql_test(c_client_test.c)
 resql_test(cluster_test.c)
 resql_test(config_test.c)
 resql_test(leader_test.c)
 resql_test(meta_test.c)
+resql_test(msg_test.c)
 resql_test(page_test.c)
 resql_test(restart_test.c)
 resql_test(session_test.c)
