--- a/.github/workflows/.ubuntu.yml
+++ b/.github/workflows/.ubuntu.yml
@@ -23,7 +23,7 @@ jobs:
           CC: ${{ matrix.compiler }}
         run: |
           sudo apt update
-          sudo apt-get install valgrind cmake
+          sudo apt-get install valgrind cmake libc6-dev-i386
           mkdir build-debug && cd build-debug
           cmake .. -DCMAKE_BUILD_TYPE=Debug -DRESQL_BUILD_TESTS=1 -DSANITIZER=undefined
           make -j
