--- a/util/benchmark/CMakeLists.txt
+++ b/util/benchmark/CMakeLists.txt
@@ -5,6 +5,10 @@ set(CMAKE_C_EXTENSIONS OFF)
 find_package(Threads REQUIRED)
 set(ADDITIONAL_LIBRARIES ${CMAKE_THREAD_LIBS_INIT} -ldl -lm)
 
+if ("${CMAKE_SIZEOF_VOID_P}" EQUAL "4")
+    list(APPEND ADDITIONAL_LIBRARIES -latomic)
+endif ()
+
 if (NOT HAVE_CLOCK_GETTIME AND ${CMAKE_SYSTEM_NAME} MATCHES "Linux")
     list(APPEND ADDITIONAL_LIBRARIES rt)
 endif ()
