--- a/.github/workflows/.ubuntu.yml
+++ b/.github/workflows/.ubuntu.yml
@@ -23,9 +23,13 @@ jobs:
           CC: ${{ matrix.compiler }}
         run: |
           sudo apt update
-          sudo apt-get install valgrind cmake
+          sudo apt-get install valgrind cmake libc6-dev-i386
           mkdir build-debug && cd build-debug
           cmake .. -DCMAKE_BUILD_TYPE=Debug -DRESQL_BUILD_TESTS=1 -DSANITIZER=undefined
+          make -j
+          make check
+          rm -rf *
+          cmake .. -DCMAKE_BUILD_TYPE=Debug -DRESQL_BUILD_TESTS=1 -DSANITIZER=address -DCMAKE_C_FLAGS=-m32
           make -j
           make check
           rm -rf *
