added missing big endian support, added automatic cleanup for tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -130,6 +130,7 @@ resql_test(client_test.c)
 resql_test(c_client_test.c)
 resql_test(cluster_test.c)
 resql_test(config_test.c)
+resql_test(entry_test.c)
 resql_test(leader_test.c)
 resql_test(meta_test.c)
 resql_test(msg_test.c)
