--- a/.github/workflows/.c.yml
+++ b/.github/workflows/.c.yml
@@ -28,7 +28,7 @@ jobs:
           cd bin
           ./resql &
           cd ..
-          cd c-client
+          cd cresql
           mkdir build && cd build
           cmake .. -DCMAKE_BUILD_TYPE=Debug
           make && make check
@@ -60,7 +60,7 @@ jobs:
           cd bin
           ./resql &
           cd ..
-          cd c-client
+          cd cresql
           mkdir build && cd build
           cmake .. -DCMAKE_BUILD_TYPE=Debug -DSANITIZER=address
           make && make check
