--- a/util/benchmark/CMakeLists.txt
+++ b/util/benchmark/CMakeLists.txt
@@ -15,35 +15,35 @@ endif ()
 
 add_executable(resql-benchmark
         resql_benchmark.c
-        ${CMAKE_SOURCE_DIR}/lib/sc/sc_mutex.h
-        ${CMAKE_SOURCE_DIR}/lib/sc/sc_mutex.c
-        ${CMAKE_SOURCE_DIR}/lib/sc/sc_time.h
-        ${CMAKE_SOURCE_DIR}/lib/sc/sc_time.c
-        ${CMAKE_SOURCE_DIR}/lib/sc/sc_thread.h
-        ${CMAKE_SOURCE_DIR}/lib/sc/sc_thread.c
-        ${CMAKE_SOURCE_DIR}/lib/sc/sc_option.h
-        ${CMAKE_SOURCE_DIR}/lib/sc/sc_option.c
-        ${CMAKE_SOURCE_DIR}/lib/hdr/hdr_atomic.h
-        ${CMAKE_SOURCE_DIR}/lib/hdr/hdr_histogram.h
-        ${CMAKE_SOURCE_DIR}/lib/hdr/hdr_histogram.c
-        ${CMAKE_SOURCE_DIR}/cresql/resql.h
-        ${CMAKE_SOURCE_DIR}/cresql/resql.c
+        ../../lib/sc/sc_mutex.h
+        ../../lib/sc/sc_mutex.c
+        ../../lib/sc/sc_time.h
+        ../../lib/sc/sc_time.c
+        ../../lib/sc/sc_thread.h
+        ../../lib/sc/sc_thread.c
+        ../../lib/sc/sc_option.h
+        ../../lib/sc/sc_option.c
+        ../../lib/hdr/hdr_atomic.h
+        ../../lib/hdr/hdr_histogram.h
+        ../../lib/hdr/hdr_histogram.c
+        ../../cresql/resql.h
+        ../../cresql/resql.c
         )
 
 target_link_libraries(resql-benchmark ${ADDITIONAL_LIBRARIES})
-target_include_directories(resql-benchmark PRIVATE ${CMAKE_SOURCE_DIR}/cresql)
-target_include_directories(resql-benchmark PRIVATE ${CMAKE_SOURCE_DIR}/lib/sc)
-target_include_directories(resql-benchmark PRIVATE ${CMAKE_SOURCE_DIR}/lib/hdr)
+target_include_directories(resql-benchmark PRIVATE ../../cresql)
+target_include_directories(resql-benchmark PRIVATE ../../lib/sc)
+target_include_directories(resql-benchmark PRIVATE ../../lib/hdr)
 
 set_source_files_properties(
-        ${CMAKE_SOURCE_DIR}/lib/hdr/hdr_atomic.h
-        ${CMAKE_SOURCE_DIR}/lib/hdr/hdr_histogram.h
-        ${CMAKE_SOURCE_DIR}/lib/hdr/hdr_histogram.c
+        ../../lib/hdr/hdr_atomic.h
+        ../../lib/hdr/hdr_histogram.h
+        ../../lib/hdr/hdr_histogram.c
         PROPERTIES
         COMPILE_FLAGS "-w"
 )
 
-install(TARGETS resql-benchmark RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
+install(TARGETS resql-benchmark RUNTIME DESTINATION ../../bin)
 
 
 
