--- a/test/example/CMakeLists.txt
+++ b/test/example/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(CMAKE_C_STANDARD 11)
 include_directories(../../src)
-include_directories(../../c-client/)
-include_directories(../)
+include_directories(../../cresql/)
+include_directories(../../test)
 
 add_library(resql-example ../test_util.c)
 target_link_libraries(resql-example PUBLIC resql-server)
