--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -161,10 +161,10 @@ add_custom_target(coverage)
 add_custom_command(
         TARGET coverage
         COMMAND lcov --capture --directory .
-        --output-file coverage.info --rc lcov_branch_coverage=1
+        --output-file coverage.info --rc lcov_branch_coverage=1 --rc lcov_excl_br_line='assert' --rc lcov_excl_line='abort'
         COMMAND lcov --remove coverage.info '/usr/*' '*test*' '*/cresql/*' '*/sqlite/*' '*/sc/*'
-        --output-file coverage.info --rc lcov_branch_coverage=1
-        COMMAND lcov --list coverage.info --rc lcov_branch_coverage=1
+        --output-file coverage.info --rc lcov_branch_coverage=1 --rc lcov_excl_br_line='assert' --rc lcov_excl_line='abort'
+        COMMAND lcov --list coverage.info --rc lcov_branch_coverage=1 --rc lcov_excl_br_line='assert' --rc lcov_excl_line='abort'
 )
 
 add_dependencies(coverage check)
