--- a/jresql/pom.xml
+++ b/jresql/pom.xml
@@ -15,8 +15,8 @@
 
     <licenses>
         <license>
-            <name>MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <name>BSD-3-Clause License</name>
+            <url>https://opensource.org/licenses/BSD-3-Clause</url>
         </license>
     </licenses>
 
